# boxmux

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  README.md  api-spec.json  bashrc-section-template.sh  build-all-targets.sh  console.rs  debug_coords.rs  debug_resize_detection.rs  diff.txt  hover_test_config.yaml  index.html  init.sh  install.sh  layout.rs  output.txt  run_boxmux.sh  test_actual_coords.rs  test_child_process.sh  test_pty_child_process.yaml  test_script_formats.yaml  test_streamlined_tabs.rs  test_yaml.rs  test_yaml_literal_blocks.rs  update_version.py  version.txt  xb.sh  xbash_profile-template  xbashrc
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.ws/: project.db  project.db-shm  project.db-wal
.wsb/: project.db  state.json  wsb.db  wsb.db-shm  wsb.db-wal
_app/: version.json
_app/immutable/assets/: 0.oEEhbyUQ.css  (+2 more)
_site/: 404.html  LICENSE  README.md  api-spec.json  feed.xml  sitemap.xml
_site/brew_formula/: xbash.rb
_site/docs/: Gemfile  api.html  configuration.html  index.html  roadmap.html  serve.sh  troubleshooting.html  user-guide.html  variables.html
_site/layouts/: developer_workspace.yaml  devops_control_center.yaml  system_monitor_pro.yaml  test_variables.yaml
_site/src/: choice_threads.rs  edge_case_tests.rs  integration_tests.rs  main.rs  resize_loop.rs  socket_tests.rs  thread_manager.rs  utils.rs
assets/: db_no_fks.sql  db_with_fks.sql  menu.yaml
brew_formula/: xbash.rb
docs/: .jekyll-metadata  404.md  _config.yml  _config_dev.yml  advanced-features.md  api.md  configuration.md  data-visualization.md  examples.md  getting-started.md  index.md  package-lock.json  package.json  plugin-system.md  pty-features.md  roadmap.md  serve.sh  svelte.config.js  tailwind.config.ts  troubleshooting.md  user-guide.md  variables.md  vite.config.ts
docs/_layouts/: default.html
docs/_site/: 404.html  CNAME  api.html  configuration.html  feed.xml  index.html  roadmap.html  sitemap.xml  troubleshooting.html  user-guide.html  variables.html
docs/src/: app.css
examples/: ansi_colors_test.yaml  pty_control_demo.sh  pty_error_states_demo.yaml  pty_process_info_test.yaml  simple-monitor.yaml
homebrew/: boxmux.rb
layouts/: README.md  auto_scroll_demo.yaml  chart_demo.yaml  choice_overflow_demo.yaml  choice_wrapping_test.yaml  dashboard.yaml  dashboard_clean.yaml  dashboard_improved.yaml  dashboard_simple.yaml  dashboard_test.yaml  database_admin.yaml  developer_workspace.yaml  devops_control_center.yaml  hotkey_demo.yaml  log_monitor.yaml  mouse_click_demo.yaml  multi_stream_tabs_demo.yaml  nested_self.yaml  network_operations.yaml  plugin_demo.yaml  pty_test.yaml  scrollbar_test.yaml  showcase_menu.yaml  simple_streaming_test.yaml  socket_pty_input_demo.yaml  socket_pty_spawn_demo.yaml  streaming_build_demo.yaml  streaming_demo.yaml  streaming_logs_demo.yaml  streaming_ux_test.yaml  system_monitor.yaml  system_monitor_pro.yaml  tab_click_test.yaml  table_demo.yaml  test_100_width.yaml  test_variables.yaml  tests.yaml  text_wrapping_demo.yaml  z_index_demo.yaml
lib/: bookworm_lib.sh  class.sh  class_lib.sh  console_lib.sh  constants.sh  darwin_lib.sh  docker_lib.sh  download_lib.sh  duckdb_lib.sh  jammy_lib.sh  layout.sh  layout_dao.sh  layout_lib.sh  lib.sh  list_lib.sh  log_lib.sh  map.sh  map_lib.sh  math_lib.sh  menu_lib.sh  network_lib.sh  os_lib.sh  parse_yaml.sh  remote_lib.sh  stack.sh  stack_lib.sh  testbar.sh
package_repos/: bookworm.txt
schemas/: app_schema.json
src/: ansi_color_processor.rs  ansi_processor.rs  chart.rs  choice_threads.rs  circular_buffer.rs  color_utils.rs  config_loop.rs  defaults.rs  draw_loop.rs  draw_utils.rs  entities.rs  input_loop.rs  integration_tests.rs  integration_yaml_tests.rs  lib.rs  live_yaml_sync.rs  main.rs  panel_loop.rs  plugin.rs  pty_manager.rs  rate_limiter.rs  real_time_updates.rs  resize_loop.rs  sensitive_zone.rs  socket_handler.rs  socket_loop.rs  socket_server.rs  socket_service.rs  state.rs  streaming_executor.rs  streaming_messages.rs  streaming_panel_manager.rs  table.rs  test_dimensions.rs  test_utils.rs  thread_manager.rs  unified_thread_pool.rs  utils.rs  validation.rs  variable_tests.rs
src/components/: border.rs  box_renderer.rs  chart_component.rs  choice_content.rs  choice_menu.rs  choice_renderer.rs  defaults.rs  error_display.rs  event_system_tests.rs  horizontal_scrollbar.rs  mod.rs  overflow_renderer.rs  progress_bar.rs  renderable_content.rs  selection_styles.rs  status_indicator.rs  tab_bar.rs  table_component.rs  text_content.rs  vertical_scrollbar.rs
src/model/: app.rs  box_entity.rs  choice.rs  common.rs  defaults.rs  layout.rs  mod.rs  muxbox.rs  panel.rs
src/tests/: VISUAL_TESTING_SUMMARY.md  ansi_processor_tests.rs  auto_scroll_tests.rs  automatic_scrollbar_tests.rs  border_component_tests.rs  box_dimensions_tests.rs  box_renderer_tests.rs  character_set_tests.rs  chart_tests.rs  choice_click_bounds_tests.rs  choice_click_regression_test.rs  choice_execution_debug_test.rs  choice_overflow_tests.rs  choice_redirect_debug.rs  clickable_scrollbar_tests.rs  clipboard_tests.rs  close_button_integration_test.rs  comprehensive_variable_tests.rs  conditional_stream_creation_tests.rs  coordinate_system_validation.rs  coordinate_translation_tests.rs  coordinate_unification_tests.rs  debug_bounds_calculation.rs  debug_coord_test.rs  defaults.rs  edge_case_tests.rs  execution_mode_message_system_tests.rs  execution_mode_migration_logic_tests.rs  execution_mode_migration_tests.rs  execution_mode_schema_validation_tests.rs  execution_mode_stream_integration_tests.rs  execution_mode_stream_source_traits_tests.rs  execution_mode_tests.rs  full_screen_detection_tests.rs  hierarchical_variable_tests.rs  home_end_navigation_tests.rs  hotkey_tests.rs  immediate_mode_execution_tests.rs  integration_tests.rs  integration_yaml_tests.rs  (+58 more)
tests/: class_tests.sh  list_tests.sh  live_ux.rs  map_tests.sh  mapdata.db  mapdata.duckdb  stack_tests.sh  tests.sh
yaml/: layout.yaml
(+154 files in other folders)
