[package]
name = "boxmux"
version = "0.94.95917"
edition = "2021"

[lib]
name = "boxmux_lib"
path = "src/lib.rs"

[[bin]]
name = "boxmux"
path = "src/main.rs"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Migrated from termion to crossterm for better cross-platform support
crossterm = "0.27"
signal-hook = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
# Updated diesel to v2 for security and performance improvements
diesel = { version = "2.0", features = ["postgres", "chrono", "uuid", "serde_json"] }
# Removed async-std to standardize on tokio
# Updated uuid to v1 for security and performance improvements
uuid = { version = "1.0", features = ["serde", "v4"] }
prometheus = "0.12"
# Updated to stable version
actix-web-prom = "0.6"
fern = "0.6"
log = "0.4"
once_cell = "1.8.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
# Updated geo crates for better performance and security
geo = "0.27"
geo-types = "0.7"
simplelog = "0.12"
lazy_static = "1.4"
tempfile = "3.2"
env_logger = "0.10"
petgraph = "0.6"
# Updated clap to v4 for better performance and API
clap = { version = "4.0", features = ["derive"] }
regex = "1.5"
bincode = "1.3"
shutil = "0.1.2"
crossbeam-channel = "0.5"
crossbeam = "0.8"
rayon = "1.5"
# Added anyhow for better error handling
anyhow = "1.0"
thiserror = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls"]
