[[bin]]
name = "boxmux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
crossbeam-channel = "0.5"
crossterm = "0.27"
env_logger = "0.10"
indexmap = "2.0"
jsonschema = { version = "0.17", default-features = false }
lazy_static = "1.4"
libloading = "0.8"
log = "0.4"
once_cell = "1.8.0"
petgraph = "0.6"
portable-pty = "0.8"
regex = "1.5"
serde_json = "1.0"
serde_yaml = "0.9"
signal-hook = "0.3"
tempfile = "3.2"
toml = "0.8"
vte = "0.11"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.clap]
features = ["derive"]
version = "4.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.0"

[lib]
name = "boxmux_lib"
path = "src/lib.rs"

[package]
authors = ["Bahram Shamshiri <jowharshamshiri@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
description = "YAML-driven terminal UI framework for rich, interactive CLI applications and dashboards with PTY support"
documentation = "https://docs.rs/boxmux"
edition = "2021"
homepage = "https://boxmux.com"
keywords = ["terminal", "tui", "yaml", "dashboard", "pty"]
license = "MIT"
name = "boxmux"
readme = "README.md"
repository = "https://github.com/jowharshamshiri/boxmux"
version = "0.240.3373"

[package.metadata.deb]
assets = [["target/release/boxmux", "usr/bin/", "755"], ["README.md", "usr/share/doc/boxmux/README", "644"], ["examples/*", "usr/share/doc/boxmux/examples/", "644"]]
copyright = "2024, Bahram Shamshiri <jowharshamshiri@gmail.com>"
depends = "$auto"
extended-description = "BoxMux is a YAML-driven terminal UI framework that enables developers to create rich, interactive CLI applications and dashboards through simple configuration files. Features include PTY support, real-time updates, scripting integration, and multi-threaded architecture for responsive terminal interfaces."
license-file = ["LICENSE", "4"]
maintainer = "Bahram Shamshiri <jowharshamshiri@gmail.com>"
priority = "optional"
section = "utils"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/boxmux", dest = "/usr/bin/boxmux", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/boxmux/README", mode = "644", doc = true },
]
summary = "YAML-driven terminal UI framework"

[target."cfg(unix)".dependencies]
libc = "0.2"
